--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Мой сайт</h1>
     <nav>
       <a href="index.html">Главная</a>
-      <a href="index.html">Обо мне</a>
-      <a href="index.html">Контакты</a>
+      <a href="kk.html">Обо мне</a>
+      <a href="kkk.html">Контакты</a>
     </nav>
   </header>
 
