--- a/kk.html
+++ b/kk.html
@@ -11,8 +11,8 @@
     <h1>Мой сайт</h1>
     <nav>
       <a href="index.html.kk">Главная</a>
-      <a href="index.html.k1">Обо мне</a>
-      <a href="index.html.k2">Контакты</a>
+      <a href="kk.html">Обо мне</a>
+      <a href="kkk.html.k2">Контакты</a>
     </nav>
   </header>
 
