Update and rename index.html.k2 to kkk.html

--- a/kkk.html
+++ b/kkk.html
@@ -10,9 +10,9 @@
   <header>
     <h1>Мой сайт</h1>
     <nav>
-      <a href="index.html.kk">Главная</a>
-      <a href="index.html.k1">Обо мне</a>
-      <a href="index.html.k2">Контакты</a>
+      <a href="index.html">Главная</a>
+      <a href="kk.html">Обо мне</a>
+      <a href="kkk.html">Контакты</a>
     </nav>
   </header>
 
