--- a/kk.html
+++ b/kk.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Мой сайт</h1>
     <nav>
-      <a href="index.html.kk">Главная</a>
+      <a href="index.html">Главная</a>
       <a href="kk.html">Обо мне</a>
       <a href="kkk.html.k2">Контакты</a>
     </nav>
