--- a/kkk.html
+++ b/kkk.html
@@ -16,24 +16,16 @@
     </nav>
   </header>
 
-<!-- Контакты -->
-    <section id="contact">
-      <h2>Контакты</h2>
-      <p>Если у тебя есть вопросы или ты хочешь связаться со мной — используй форму ниже.</p>
-      <form>
-        <input type="text" placeholder="Ваше имя" required />
-        <input type="email" placeholder="Email" required />
-        <textarea placeholder="Сообщение" rows="4" required></textarea>
-        <button type="submit">Отправить</button>
-      </form>
-    </section>
 
-  </main>
+  <div class="container">
+    <h1>Мои проекты</h1>
+    <div class="buttons">
+      <button>Проект 1</button>
+      <button>Проект 2</button>
+      <button>Проект 3</button>
+    </div>
+  </div>
 
-  <!-- Подвал -->
-  <footer>
-    © 2025 Мой первый сайт. Все права защищены.
-  </footer>
 
 </body>
 </html>
