--- a/kkk.html
+++ b/kkk.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="index.html">Главная</a>
       <a href="kk.html">Обо мне</a>
-      <a href="kkk.html">Контакты</a>
+      <a href="kkk.html">Мои сайты</a>
     </nav>
   </header>
 
