--- a/kk.html
+++ b/kk.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Мой итоговый сайт</title>
-  <link href="style.css"" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
