--- a/kkk.html
+++ b/kkk.html
@@ -16,7 +16,7 @@
     </nav>
   </header>
 
-
+<main>
   <div class="container">
     <h1>Мои проекты</h1>
     <div class="buttons">
@@ -25,7 +25,7 @@
       <button>Проект 3</button>
     </div>
   </div>
-
+</main>
 
 </body>
 </html>
