--- a/kk.html
+++ b/kk.html
@@ -19,6 +19,7 @@
 
 
 <!-- Обо мне -->
+<main>
     <section id="about">
       <h2>Обо мне</h2>
       <p>Мне 12 лет, я живу в небольшом городе. В свободное время я занимаюсь программированием, учу английский язык и играю в игры.</p>
@@ -42,5 +43,6 @@
         </div>
       </div>
     </section>
+</main>
 </body>
 </html>
