--- a/kkk.html
+++ b/kkk.html
@@ -19,11 +19,11 @@
 <main>
   <div class="container">
     <h1>Мои проекты</h1>
-    <div class="buttons">
-      <button>Проект 1</button>
-      <button>Проект 2</button>
-      <button>Проект 3</button>
-    </div>
+<div class="buttons">
+  <a href="project1.html">Проект 1</a>
+  <a href="project2.html">Проект 2</a>
+  <a href="project3.html">Проект 3</a>
+</div>
   </div>
 </main>
 
