--- a/kkk.html
+++ b/kkk.html
@@ -22,7 +22,7 @@
 <div class="buttons">
   <a href="project1.html">Проект 1</a>
   <a href="project2.html">Проект 2</a>
-  <a href="project3.html">Проект 3</a>
+  <a href="https://evlampiy92.github.io/itogoviy/">Проект 3</a>
 </div>
   </div>
 </main>
