--- a/kkk.html
+++ b/kkk.html
@@ -20,7 +20,7 @@
   <div class="container">
     <h1>Мои проекты</h1>
 <div class="buttons">
-  <a href="project1.html">Проект 1</a>
+  <a href="https://evlampiy92.github.io/werdg/">Проект 1</a>
   <a href="https://evlampiy92.github.io/glavnay/">Проект 2</a>
   <a href="https://evlampiy92.github.io/itogoviy/">Проект 3</a>
 </div>
